# remote_control

./: Cargo.toml  ip.ini
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
