[package]
name = "server"
version = "0.1.0"
authors = ["RheoTommy <tommyrheo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { path = "../common" }
serde = { version = "*", features = ["derive"] }
bincode = "*"
encoding_rs = "*"
ws = "*"